# autoPicklr

./: .env.example  .replit  brokers.py  data.py  db.py  export_positions_csv.py  main.py  main_simple.py  ml_features.py  ml_runtime.py  ml_train.py  models.py  picklr.db  positions_export.csv  pyproject.toml  replit.md  requirements  requirements.txt  risk.py  routes_stop_uplift.py  run_server.py  settings.py  signal_engine.py  sim.py  start.sh  start_server.sh  test_server.py  universe.py
attached_assets/: Config (.env.example)_1755396313710.txt  File Tree_1755396310199.txt  data.py_1755396311839.txt  main.py_1755396308050.txt  models.py_1755396305169.txt  requirements_1755396301611.txt  risk.py_1755396296772.txt  settings.py_1755396294902.txt  signal_engine.py_1755396288535.txt  sim.py_1755396292636.txt
brokers/: _init_.py  base.py  sim_broker.py
models/: xgb_H48_D365_20250901-1439.json  xgb_H96_D365_20250901-1900.json  xgb_target_first.json
static/: app.js  dashboard.css  dashboard.js
templates/: dashboard.html
